--- a/pwigi/src/App.css
+++ b/pwigi/src/App.css
@@ -21,19 +21,104 @@
 }
 
 #Gallery {
-  padding: 100px 0;
-  height: 1000px;
+  height: auto;
+  font-family: "Times New Roman", Times, serif;
   border: 1px solid #ccc;
-  background-color: #FFEBCD;
+  background-color: #FFFAFA;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .Box {
-  background: #DEB887;
+  background: #B0C4DE;
   color: white;
-  width: 300px;
-  height: 400px;
-  border-radius: 15px;
-  border: 2px solid #FFDAB9;
+  width: 390px;
+  height: 600px;
+  border-radius: 1px;
+  border: 1px solid black;
+  outline-style: outset;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
 }
+
+.Lupitaimages {
+  height: 30%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  
+  
+}
+img {
+ height: 100%;
+}
+
+.Subtittle {
+  padding: 10px;
+  width: 90%;
+  height: 200px;
+  text-align: justify;
+  font-size: 15px;
+  align-items: center;
+}
+
+#Articles, #products {
+  display: flex;
+  justify-content: center;
+} 
+.Producto {
+  width: 200px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.Producto>h2 {
+  margin: 0;
+}
+
+.Subtitulo {
+  width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ImgProd {
+ width: 80%;
+ height: 40%;
+}
+
+/*.Producto {
+  width: 350px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+
+.ImgProd {
+  height: 60%;
+  width: 120%;
+  display: flex;
+  justify-content: center;
+}
+.Subtitulo {
+  width:200px;
+  text-align: under;
+  display:block;
+  
+  margin-bottom: 1px;
+  float:left;
+
+}
+*/
